- fixed editing bug in note description - dark mode status now saved in local storage - sorting stored in local storage

--- a/src/public/styles/index.css
+++ b/src/public/styles/index.css
@@ -73,7 +73,6 @@ body {
 .note-child-title-desc textarea {
   resize: none;
   height: 75px;
-  margin-top: 0;
   border-radius: 5px;
   font-family: "Comic Sans MS", sans-serif;
 }
