--- a/src/public/styles/navbar.css
+++ b/src/public/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  background-color: #555;
+  background-color: #416ee1;
   overflow: auto;
   display: flex;
   justify-content: space-evenly;
@@ -43,4 +43,8 @@
 
 #theme-button:hover {
   background-color: #000;
+}
+
+.navbar a .fas {
+  margin-left: 0.5em;
 }
